--- a/src/pages/testing/defects/defect-details/defect-details.html
+++ b/src/pages/testing/defects/defect-details/defect-details.html
@@ -21,7 +21,7 @@
       <ion-grid padding-horizontal>
         <ion-row justify-content-start align-items-center class="defect-status margin-vertical-half">
           <span>
-              <span>{{ defect.metadata.category.imNumber }}.{{ defect.metadata.item.itemNumber }}</span>
+              <span>{{ defect.imNumber }}.{{ defect.itemNumber }}</span>
               <span *ngIf="defect.deficiencyId">({{ defect.deficiencyId }})</span>
               <span *ngIf="defect.deficiencySubId">({{ defect.deficiencySubId }})</span>
           </span>
@@ -33,7 +33,7 @@
           </ion-badge>
         </ion-row>
         <ion-row>
-          <h2 class="item-description" no-margin>{{defect.metadata.item.itemDescription}}</h2>
+          <h2 class="item-description" no-margin>{{defect.itemDescription}}</h2>
         </ion-row>
         <ion-row class="defect-description margin-vertical-half">
           <p no-margin>{{ defect.deficiencyText }}</p>
@@ -48,59 +48,59 @@
 
       <ion-item *ngIf="defectMetadata.location.vertical" padding-left>
         <ion-label>Vertical</ion-label>
-        <ion-select text-capitalize item-end interface="action-sheet" [(ngModel)]="defect.location.vertical" placeholder="Select">
+        <ion-select text-capitalize item-end interface="action-sheet" [(ngModel)]="defect.additionalInformation.location.vertical" placeholder="Select">
           <ion-option *ngFor="let position of defectMetadata.location.vertical" [value]="position">{{position}}</ion-option>
         </ion-select>
-        <ion-icon *ngIf="!defect.location.vertical" item-end name='arrow-forward' class="color-grey-2"></ion-icon>
-        <ion-icon *ngIf="defect.location.vertical" item-end name='checkmark' color="primary"></ion-icon>
+        <ion-icon *ngIf="!defect.additionalInformation.location.vertical" item-end name='arrow-forward' class="color-grey-2"></ion-icon>
+        <ion-icon *ngIf="defect.additionalInformation.location.vertical" item-end name='checkmark' color="primary"></ion-icon>
       </ion-item>
       <ion-item *ngIf="defectMetadata.location.horizontal" padding-left>
         <ion-label>Horizontal</ion-label>
-        <ion-select text-capitalize item-end interface="action-sheet" [(ngModel)]="defect.location.horizontal" placeholder="Select">
+        <ion-select text-capitalize item-end interface="action-sheet" [(ngModel)]="defect.additionalInformation.location.horizontal" placeholder="Select">
           <ion-option *ngFor="let position of defectMetadata.location.horizontal" [value]="position">{{position}}</ion-option>
         </ion-select>
-        <ion-icon *ngIf="!defect.location.horizontal" item-end name='arrow-forward' class="color-grey-2"></ion-icon>
-        <ion-icon *ngIf="defect.location.horizontal" item-end name='checkmark' color="primary"></ion-icon>
+        <ion-icon *ngIf="!defect.additionalInformation.location.horizontal" item-end name='arrow-forward' class="color-grey-2"></ion-icon>
+        <ion-icon *ngIf="defect.additionalInformation.location.horizontal" item-end name='checkmark' color="primary"></ion-icon>
       </ion-item>
       <ion-item *ngIf="defectMetadata.location.lateral" padding-left>
         <ion-label>Lateral</ion-label>
-        <ion-select text-capitalize item-end interface="action-sheet" [(ngModel)]="defect.location.lateral" placeholder="Select">
+        <ion-select text-capitalize item-end interface="action-sheet" [(ngModel)]="defect.additionalInformation.location.lateral" placeholder="Select">
           <ion-option *ngFor="let position of defectMetadata.location.lateral" [value]="position">{{position}}</ion-option>
         </ion-select>
-        <ion-icon *ngIf="!defect.location.lateral" item-end name='arrow-forward' class="color-grey-2"></ion-icon>
-        <ion-icon *ngIf="defect.location.lateral" item-end name='checkmark' color="primary"></ion-icon>
+        <ion-icon *ngIf="!defect.additionalInformation.location.lateral" item-end name='arrow-forward' class="color-grey-2"></ion-icon>
+        <ion-icon *ngIf="defect.additionalInformation.location.lateral" item-end name='checkmark' color="primary"></ion-icon>
       </ion-item>
       <ion-item *ngIf="defectMetadata.location.longitudinal" padding-left>
         <ion-label>Longitudinal</ion-label>
-        <ion-select text-capitalize item-end interface="action-sheet" [(ngModel)]="defect.location.longitudinal" placeholder="Select">
+        <ion-select text-capitalize item-end interface="action-sheet" [(ngModel)]="defect.additionalInformation.location.longitudinal" placeholder="Select">
           <ion-option *ngFor="let position of defectMetadata.location.longitudinal" [value]="position">{{position}}</ion-option>
         </ion-select>
-        <ion-icon *ngIf="!defect.location.longitudinal" item-end name='arrow-forward' class="color-grey-2"></ion-icon>
-        <ion-icon *ngIf="defect.location.longitudinal" item-end name='checkmark' color="primary"></ion-icon>
+        <ion-icon *ngIf="!defect.additionalInformation.location.longitudinal" item-end name='arrow-forward' class="color-grey-2"></ion-icon>
+        <ion-icon *ngIf="defect.additionalInformation.location.longitudinal" item-end name='checkmark' color="primary"></ion-icon>
       </ion-item>
       <ion-item *ngIf="defectMetadata.location.rowNumber" padding-left>
         <ion-label>Row Number</ion-label>
-        <ion-select text-capitalize item-end interface="action-sheet" [(ngModel)]="defect.location.rowNumber" placeholder="Select">
+        <ion-select text-capitalize item-end interface="action-sheet" [(ngModel)]="defect.additionalInformation.location.rowNumber" placeholder="Select">
           <ion-option *ngFor="let position of defectMetadata.location.rowNumber" [value]="position">{{position}}</ion-option>
         </ion-select>
-        <ion-icon *ngIf="!defect.location.rowNumber" item-end name='arrow-forward' class="color-grey-2"></ion-icon>
-        <ion-icon *ngIf="defect.location.rowNumber" item-end name='checkmark' color="primary"></ion-icon>
+        <ion-icon *ngIf="!defect.additionalInformation.location.rowNumber" item-end name='arrow-forward' class="color-grey-2"></ion-icon>
+        <ion-icon *ngIf="defect.additionalInformation.location.rowNumber" item-end name='checkmark' color="primary"></ion-icon>
       </ion-item>
       <ion-item *ngIf="defectMetadata.location.seatNumber" padding-left>
         <ion-label>Seat Number</ion-label>
-        <ion-select text-capitalize item-end interface="action-sheet" [(ngModel)]="defect.location.seatNumber" placeholder="Select">
+        <ion-select text-capitalize item-end interface="action-sheet" [(ngModel)]="defect.additionalInformation.location.seatNumber" placeholder="Select">
           <ion-option *ngFor="let position of defectMetadata.location.seatNumber" [value]="position">{{position}}</ion-option>
         </ion-select>
-        <ion-icon *ngIf="!defect.location.seatNumber" item-end name='arrow-forward' class="color-grey-2"></ion-icon>
-        <ion-icon *ngIf="defect.location.seatNumber" item-end name='checkmark' color="primary"></ion-icon>
+        <ion-icon *ngIf="!defect.additionalInformation.location.seatNumber" item-end name='arrow-forward' class="color-grey-2"></ion-icon>
+        <ion-icon *ngIf="defect.additionalInformation.location.seatNumber" item-end name='checkmark' color="primary"></ion-icon>
       </ion-item>
       <ion-item *ngIf="defectMetadata.location.axleNumber" padding-left>
         <ion-label>Axle Number</ion-label>
-        <ion-select text-capitalize item-end interface="action-sheet" [(ngModel)]="defect.location.axleNumber" placeholder="Select">
+        <ion-select text-capitalize item-end interface="action-sheet" [(ngModel)]="defect.additionalInformation.location.axleNumber" placeholder="Select">
           <ion-option *ngFor="let position of defectMetadata.location.axleNumber" [value]="position">{{position}}</ion-option>
         </ion-select>
-        <ion-icon *ngIf="!defect.location.axleNumber" item-end name='arrow-forward' class="color-grey-2"></ion-icon>
-        <ion-icon *ngIf="defect.location.axleNumber" item-end name='checkmark' color="primary"></ion-icon>
+        <ion-icon *ngIf="!defect.additionalInformation.location.axleNumber" item-end name='arrow-forward' class="color-grey-2"></ion-icon>
+        <ion-icon *ngIf="defect.additionalInformation.location.axleNumber" item-end name='checkmark' color="primary"></ion-icon>
       </ion-item>
     </ion-item-group>
 
@@ -109,7 +109,7 @@
         <span padding-left>NOTES</span>
       </ion-item-divider>
       <ion-item padding-left>
-        <ion-textarea placeholder="Add notes" [(ngModel)]="defect.notes" maxlength="200" class="textarea-height"></ion-textarea>
+        <ion-textarea placeholder="Add notes" [(ngModel)]="defect.additionalInformation.notes" maxlength="200" class="textarea-height"></ion-textarea>
       </ion-item>
     </ion-item-group>
 
