--- a/src/pages/testing/test-creation/complete-test/complete-test.html
+++ b/src/pages/testing/test-creation/complete-test/complete-test.html
@@ -85,7 +85,7 @@
                 <ion-item class="defect-details" (click)="openDefect(defect)">
                     <h3 class="defect-name">
                         <span>
-                            <span>{{ defect.metadata.category.imNumber }}.{{ defect.metadata.item.itemNumber }}</span>
+                            <span>{{ defect.imNumber }}.{{ defect.itemNumber }}</span>
                             <span *ngIf="defect.deficiencyId">({{ defect.deficiencyId }})</span>
                             <span *ngIf="defect.deficiencySubId">({{ defect.deficiencySubId }})</span>
                         </span>
@@ -98,10 +98,10 @@
                         </ion-badge>
                     </h3>
                     <h4 class="parent-info-color">
-                        {{ defect.metadata.category.imNumber }}. {{ defect.metadata.category.imDescription}}
+                        {{ defect.imNumber }}. {{ defect.imDescription}}
                     </h4>
                     <h4 class="parent-info-color">
-                        {{ defect.metadata.item.itemNumber }}. {{ defect.metadata.item.itemDescription }}
+                        {{ defect.itemNumber }}. {{ defect.itemDescription }}
                     </h4>
                     <h4 class="parent-info-color truncate-text" *ngIf="defect.deficiencyCategory != 'Advisory'">
                         <span>
