--- a/src/pages/testing/vehicle/vehicle-details/vehicle-details.html
+++ b/src/pages/testing/vehicle/vehicle-details/vehicle-details.html
@@ -1,8 +1,8 @@
 <ion-header>
     <ion-navbar>
         <ion-title margin-left>
-            <ng-container *ngFor="let techRecord of vehicleData.techRecord">
-                <span *ngIf="commonFunc.checkForMatch(techRecord.vehicleType, 'trl');
+            <ng-container>
+                <span *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType, 'trl');
                             else showVehicleDetailsTitle">
                     Trailer details
                 </span>
@@ -20,16 +20,16 @@
 </ion-header>
 
 <ion-content no-padding>
-        <div text-uppercase
-             text-center
-             class="vehicle-header-vrm-number">
-            {{ vehicleData.vrm }}
-        </div>
+    <div text-uppercase
+         text-center
+         class="vehicle-header-vrm-number">
+        {{ vehicleData.vrm }}
+    </div>
 
     <ion-list class="vehicle-list">
         <ion-list-header padding-left padding-right>
-            <ng-container *ngFor="let techRecord of vehicleData.techRecord">
-                <span *ngIf="commonFunc.checkForMatch(techRecord.vehicleType, 'trl');
+            <ng-container>
+                <span *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType, 'trl');
                              else showVehicleSummaryTitle">
                     TRAILER SUMMARY
                 </span>
@@ -46,14 +46,14 @@
                 <p>{{ vehicleData.vin }}</p>
             </div>
         </ion-item>
-        <ng-container *ngFor="let techRecord of vehicleData.techRecord">
-            <ng-container *ngIf="commonFunc.checkForMatch(techRecord.statusCode, 'current')">
+        <ng-container>
+            <ng-container *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.statusCode, 'current')">
                 <ion-item margin-left>
                     <ion-label>
                         <h3>Chassis make</h3>
                     </ion-label>
                     <div item-content padding-right>
-                        <p>{{ techRecord.chassisMake }}</p>
+                        <p>{{ vehicleData.techRecord.chassisMake }}</p>
                     </div>
                 </ion-item>
                 <ion-item margin-left>
@@ -61,7 +61,7 @@
                         <h3>Chassis model</h3>
                     </ion-label>
                     <div item-content padding-right>
-                        <p>{{ techRecord.chassisModel }}</p>
+                        <p>{{ vehicleData.techRecord.chassisModel }}</p>
                     </div>
                 </ion-item>
                 <ion-item margin-left>
@@ -69,7 +69,7 @@
                         <h3>Body make</h3>
                     </ion-label>
                     <div item-content padding-right>
-                        <p>{{ techRecord.bodyMake }}</p>
+                        <p>{{ vehicleData.techRecord.bodyMake }}</p>
                     </div>
                 </ion-item>
                 <ion-item margin-left>
@@ -77,7 +77,7 @@
                         <h3>Body model</h3>
                     </ion-label>
                     <div item-content padding-right>
-                        <p>{{ techRecord.bodyModel }}</p>
+                        <p>{{ vehicleData.techRecord.bodyModel }}</p>
                     </div>
                 </ion-item>
                 <ion-item margin-left>
@@ -85,7 +85,7 @@
                         <h3>Body type</h3>
                     </ion-label>
                     <div item-content padding-right>
-                        <p>{{ techRecord.bodyType.description }}</p>
+                        <p>{{ vehicleData.techRecord.bodyType.description }}</p>
                     </div>
                 </ion-item>
                 <ion-item margin-left>
@@ -93,7 +93,7 @@
                         <h3>Year of manufacture</h3>
                     </ion-label>
                     <div item-content padding-right>
-                        <p>{{ techRecord.manufactureYear }}</p>
+                        <p>{{ vehicleData.techRecord.manufactureYear }}</p>
                     </div>
                 </ion-item>
                 <ion-item margin-left>
@@ -101,7 +101,7 @@
                         <h3>Date of first registration</h3>
                     </ion-label>
                     <div item-content padding-right>
-                        <p>{{ techRecord.regnDate | date: dateFormat }}</p>
+                        <p>{{ vehicleData.techRecord.regnDate | date: dateFormat }}</p>
                     </div>
                 </ion-item>
                 <ion-item margin-left>
@@ -109,7 +109,7 @@
                         <h3>Axles</h3>
                     </ion-label>
                     <div item-content padding-right>
-                        <p>{{ techRecord.noOfAxles }}</p>
+                        <p>{{ vehicleData.techRecord.noOfAxles }}</p>
                     </div>
                 </ion-item>
                 <ion-item margin-left>
@@ -117,7 +117,7 @@
                         <h3>Brake code</h3>
                     </ion-label>
                     <div item-content padding-right>
-                        <p>{{ techRecord.brakeCode }}</p>
+                        <p>{{ vehicleData.techRecord.brakeCode }}</p>
                     </div>
                 </ion-item>
             </ng-container>
@@ -127,9 +127,9 @@
     <ion-list class="vehicle-list">
         <ion-list-header padding-left padding-right>VIEW MORE INFORMATION</ion-list-header>
         <button ion-item margin-left (click)="goToVehicleTestResultsHistory()">
-            <ng-container *ngFor="let techRecord of vehicleData.techRecord">
+            <ng-container>
                 <h3>
-                    <span *ngIf="commonFunc.checkForMatch(techRecord.vehicleType, 'trl');
+                    <span *ngIf="commonFunc.checkForMatch(vehicleData.techRecord.vehicleType, 'trl');
                                 else showVehicleTestHistoryTitle">
                         Trailer
                     </span>
