--- a/src/pages/visit/visit-timeline/visit-timeline.html
+++ b/src/pages/visit/visit-timeline/visit-timeline.html
@@ -34,9 +34,9 @@
           <span *ngIf="timelineItem.status != TEST_REPORT_STATUS.CANCELLED">
                     <p *ngFor="let vehicleTest of vehicle.testTypes">
                       <span>{{ vehicleTest.testTypeCategoryName }} •</span>
-                      <span *ngIf="vehicleTest.testResult === TEST_TYPE_RESULT.SUCCESSFUL" class="pass" text-uppercase>{{ vehicleTest.testResult }}</span>
-                      <span *ngIf="vehicleTest.testResult === TEST_TYPE_RESULT.UNSUCCESSFUL" class="fail"
-                            text-uppercase>{{ vehicleTest.result }}</span>
+                      <span *ngIf="vehicleTest.testResult === TEST_TYPE_RESULT.PASS" class="pass" text-uppercase>{{ vehicleTest.testResult }}</span>
+                      <span *ngIf="vehicleTest.testResult === TEST_TYPE_RESULT.FAIL" class="fail"
+                            text-uppercase>{{ vehicleTest.testResult }}</span>
                       <span *ngIf="vehicleTest.testResult === TEST_TYPE_RESULT.ABANDONED" class="fail" text-uppercase>{{ vehicleTest.testResult }}</span>
                       <span *ngIf="vehicleTest.testResult === TEST_TYPE_RESULT.PRS" class="prs" text-uppercase>{{ vehicleTest.testResult }}</span>
                     </p>
