--- a/src/pages/testing/defects/add-defect-category/add-defect-category.html
+++ b/src/pages/testing/defects/add-defect-category/add-defect-category.html
@@ -1,7 +1,7 @@
 <ion-header transforming-searchBar [searchBarElemRef]="searchBar">
   <ion-navbar>
     <ion-title margin-left>
-      Record defect
+      Defect category
     </ion-title>
   </ion-navbar>
   <ion-toolbar>
