CVSB-1242 - Change technical record model

--- a/src/pages/testing/vehicle/vehicle-details/vehicle-details.html
+++ b/src/pages/testing/vehicle/vehicle-details/vehicle-details.html
@@ -85,7 +85,7 @@
                         <h3>Body type</h3>
                     </ion-label>
                     <div item-content padding-right>
-                        <p>{{ techRecord.bodyType }}</p>
+                        <p>{{ techRecord.bodyType.description }}</p>
                     </div>
                 </ion-item>
                 <ion-item margin-left>
@@ -93,7 +93,7 @@
                         <h3>Year of manufacture</h3>
                     </ion-label>
                     <div item-content padding-right>
-                        <p>{{ techRecord.manufactureDate }}</p>
+                        <p>{{ techRecord.manufactureYear }}</p>
                     </div>
                 </ion-item>
                 <ion-item margin-left>
