CVSB-2726 - Hotfix for test station p number

--- a/src/pages/test-station/test-station-details/test-station-details.html
+++ b/src/pages/test-station/test-station-details/test-station-details.html
@@ -19,7 +19,7 @@
       </ion-item>
       <ion-item>
         <div padding-left text-left float-left class="label-custom-style">P-number</div>
-        <div float-right text-right class="value-custom-style">{{ testStation.testStationNumber }}</div>
+        <div float-right text-right class="value-custom-style">{{ testStation.testStationPNumber }}</div>
       </ion-item>
       <ion-item-divider text-uppercase padding-left>Address</ion-item-divider>
       <ion-item>
