--- a/src/pages/test-station/test-station-search/test-station-search.html
+++ b/src/pages/test-station/test-station-search/test-station-search.html
@@ -25,7 +25,7 @@
         </ion-item-divider>
         <button ion-item (click)="openTestStation(testStation)" padding-left class="list-item-height">
           <h3>{{ testStation.testStationName }}</h3>
-          <p *ngIf="testStation.searchProperty != 'testStationAddress'" [innerHTML]="boldSearchVal(testStation.testStationNumber, searchVal)"></p>
+          <p *ngIf="testStation.searchProperty != 'testStationAddress'" [innerHTML]="boldSearchVal(testStation.testStationPNumber, searchVal)"></p>
           <p *ngIf="testStation.searchProperty == 'testStationAddress'" [innerHTML]="boldSearchVal(testStation.testStationAddress, searchVal)"></p>
         </button>
       </div>
