--- a/src/pages/testing/defects/add-defect-category/add-defect-category.html
+++ b/src/pages/testing/defects/add-defect-category/add-defect-category.html
@@ -12,7 +12,7 @@
                    (ionCancel)="keepCancelOn($event, true)"
                    [showCancelButton]="true"
                    [cancelButtonText]="'Cancel'"
-                   placeholder="Search for a defect category or IM number"
+                   [placeholder]="appStrings.PLACEHOLDER_DEFECT_CAT"
                    #searchBar>
     </ion-searchbar>
   </ion-toolbar>
